NM Portfolio - Contact page design modifications Corrected the contact page design break on portfolio page. There was no space allocated between the contact form and the top of document.

--- a/contact_styles.css
+++ b/contact_styles.css
@@ -216,6 +216,10 @@ header {
     transition: all ease 150ms;
     transition-delay: 350ms;
 }
+.bg {
+    /* height: 100vh; */
+    padding-top: 130px;
+}
 .formContainer{
     display: flex;
     flex-direction: column;
